[Bugfix] Fixed overflowing discussion forum category names (#3652)
* Fixed overflowing category names

* Clip category text to 50 characters

* labels clipping

* Limit input of longer than 50 characters category name

* Limit fixing on backend, remove ellipsis

* 100 width

* restore line height

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -1519,7 +1519,7 @@ div.full_height {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 65%;
+    width: 100%;
 }
 
 #ui-category-list li {
